Fix "Navbar hides initial content when jumping to in-page anchor"
https://github.com/twbs/bootstrap/issues/1768#issuecomment-46519033

Closes https://gitlab.com/gitlab-com/gitlab-docs/issues/107

--- a/content/assets/stylesheets/stylesheet.scss
+++ b/content/assets/stylesheets/stylesheet.scss
@@ -731,3 +731,12 @@ h6 {
     color: $topic-runner-header-color;
   }
 }
+
+// https://gitlab.com/gitlab-com/gitlab-docs/issues/107#note_36655246
+*[id]::before {
+  display: block;
+  content: " ";
+  margin-top: -75px;
+  height: 75px;
+  visibility: hidden;
+}
